[package]
name = "rs-pgcopy2cbor"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.ciborium]
version = "0.2.2"
default-features = false
features = [
	"std",
]
