[package]
name = "rs-pgcopy2cbor"
version = "0.1.0"
edition = "2021"
description = "PGCOPY -> CBOR(PostgreSQL columns -> CBOR byte strings)"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-pgcopy2cbor/latest"
repository = "https://github.com/takanoriyanagitani/rs-pgcopy2cbor"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.ciborium]
version = "0.2.2"
default-features = false
features = [
	"std",
]
